hphp/hack/test/typecheck/functional_anon_fun2.php.exp
File "functional_anon_fun2.php", line 23, characters 22-22:
The argument to fun() must be a single-quoted, constant literal string representing a valid function name. (Naming[2024])
